<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account"
        android:title="@string/app_bar_account"
        android:icon="@drawable/ic_account_circle"
        android:contentDescription="@string/description_app_bar_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/app_bar_settings"
        android:contentDescription="@string/description_app_bar_settings"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/more"
        android:title="@string/app_bar_about"
        android:contentDescription="@string/description_app_bar_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/version"
        android:title="@string/app_bar_version"
        android:contentDescription="@string/description_app_bar_version"
        app:showAsAction="never" />
</menu>