<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:title="@string/drawer_mail_header">
        <menu>
            <item
                android:id="@+id/search_item"
                android:icon="@drawable/ic_search"
                android:title="@string/drawer_search_title"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/rotation_item"
                android:icon="@drawable/ic_3d_rotation"
                android:title="@string/drawer_3d_title"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/accelerator_item"
                android:icon="@drawable/ic_accelerator"
                android:title="@string/drawe_accelerator_title"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/dashboard_item"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/drawer_dashboard_title"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item
        android:id="@+id/labels_item"
        android:title="@string/drawer_labels_subheader_tittle">
        <menu>
            <item
                android:id="@+id/label_one"
                android:icon="@drawable/ic_coffee_maker"
                android:title="@string/drawer_label_1"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/label_two"
                android:icon="@drawable/ic_coffee_maker"
                android:title="@string/drawer_label_2"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>